# CAPT_core

./: .gitignore  .gitleaks.toml  README.md  capt_cli.py  doctor.sh  install.sh  pyproject.toml  uninstall.sh  verify.sh  verify_runtime.py
.github/workflows/: release-security.yml
capt_solo/: __init__.py  api.py
capt_solo/components/: __init__.py  _ate_stdio_server.py  anti_token_extraction.mcp.json  anti_token_extraction.py
capt_solo/core/: __init__.py  config.py  errors.py
capt_solo/ctp/: __init__.py  journal.py
capt_solo/foundry/: __init__.py  bubble.py  claimguard.py  columns.py  composition.py  curator.py  governance.py  harness.py  proof.py  registry.py  skill_foundry.py  workflow_proof.py
capt_solo/khsb/: __init__.py  bus.py
capt_solo/lifecycle/: __init__.py  feedback.py  (+6 more)
docs/: ANTI_TOKEN_EXTRACTION.md  API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_ATE_ADAPTER.md  CAPABILITY_REGISTRY.md  CHANGELOG.md  CLAIMGUARD.md  CLI.md  DATA_MODEL.md  EXTENDING.md  GOVERNANCE.md  KNOWLEDGE_BUBBLES.md  MIGRATIONS.md  PLUGIN_GUIDE.md  PROOF_ENGINE.md  RELEASE_AUDIT_v0.4.md  RELEASE_CANDIDATE_v0.4.0.md  ROADMAP.md  SECURITY.md  SKILL_FOUNDRY.md  SKILL_GUIDE.md  VALIDATION.md
tests/: conftest.py  test_api.py  test_ctp.py  test_khsb.py  test_memory.py  test_migration.py  test_plugin.py  test_plugin_v02.py  test_v02_coverage.py  test_v02_csg.py  test_v02_edge.py  test_v02_integration.py  test_v02_models.py  test_v03_feedback.py  test_v03_integration.py  test_v03_lifecycle.py  test_v03_migration.py  test_v03_procedures.py  test_v03_prospective.py  test_v03_sessions.py  test_v04_anti_token_extraction.py  test_v04_boundary.py  test_v04_cli.py  test_v04_curator.py  test_v04_degradation.py  test_v04_foundry.py  test_v04_migration.py  test_v04_plugin.py  test_v04_release_scenarios.py  test_v04_workflow_proof.py
(+22 files in other folders)
