[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capt-solo"
version = "0.1.0"
description = "Local-first cognitive runtime for individual developers, integrating with Hermes."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["capt", "hermes", "memory", "cognitive", "local-first"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/inversion-labs/capt-solo"

[options]
packages = ["capt_solo", "capt_solo.core", "capt_solo.memory", "capt_solo.ctp", "capt_solo.khsb", "capt_solo.plugin"]
python_requires = ">=3.8"

[options.entry_points.hermes_plugins]
capt-solo = "capt_solo.plugin:get_plugin"
